# sample-oh-my-aidlcops

./: .lycheeignore  CHANGELOG.md  README.ko.md  README.md  REFERENCES.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: oma-foundation.yml
docs/: .gitignore  docusaurus.config.ts  sidebars.ts
docs/docs/: architecture.md  claude-code-setup.md  doctor.md  easy-button.md  enterprise-readiness.md  getting-started.md  harness-dsl-v2.md  harness-dsl.md  harness-engineering.md  intro.md  keyword-triggers.md  kiro-setup.md  knowledge-wiki.md  ontology-engineering.md  ontology.md  philosophy-aidlc-meets-agenticops.md  rollback.md  telemetry.md
docs/docs/compliance/: owasp-llm-top10.md  slsa-provenance.md
docs/i18n/ko/: code.json
docs/i18n/ko/docusaurus-plugin-content-docs/: current.json
docs/scripts/: sync-references.mjs
docs/src/components/HomeLanding/: index.tsx
hooks/: session-start.sh  user-prompt-submit.sh
plugins/agenticops/skills/cost-governance/: SKILL.md
plugins/ai-infra/: ai-infra.oma.yaml
plugins/ai-infra/hooks/: harness-rules.json  hooks.json
plugins/ai-infra/references/: langfuse-self-hosted-setup.md
plugins/ai-infra/skills/langfuse-observability/: SKILL.md
plugins/aidlc/: aidlc.oma.yaml
plugins/aidlc/hooks/: hooks.json  session-start-ontology.sh
plugins/aidlc/skills/ontology-wiki/: GRAPH_REPORT.md  README.md  SKILL.md  graph.json
plugins/modernization/skills/containerization/: SKILL.md
schemas/harness/: dsl.schema.json
scripts/oma/: doctor-enterprise.sh  validate.sh
steering/: oma-hub.md
steering/workflows/: diagram-authoring-standard.md
tests/audit/: test_event_schema.py
tests/harness/: test_ai_infra_compile.py  test_session_start_emit.py  test_telemetry_schema.py
tests/hooks/: test_session_start.bats
tests/installer/: test_enterprise_smoke.bats
tests/standalone/: run_harness_checks.py  run_pytest_subset.py
tools/oma_compile/: compile.py
tools/oma_harness/: enforce.py
(+34 files in other folders)
